added meta tags and Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <html>
 
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159411627-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-159411627-1');
+    </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <meta name="Description"
+        content="Ishan Sharma ishandeveloper Ishan Inc. Chandigarh, India www.ishandeveloper.com .NET | ML | AI | Python | UI/UX | App Developer | Flutter | Web Developer" />
+    <title>Ishan Sharma</title>
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
 <body id="index-body" style="overflow: hidden;">
@@ -27,7 +45,8 @@
         <div style="margin-top:10vh;" class="row">
             <div class="col-md-6" id="left-hero">
                 <h1 class="hero-tag">Hi, I'm Ishan</h1>
-                <p class="hero-des">I make elegantly professional <b>web</b> apps and <b>flutter</b> apps for a living and also design <b>user experiences</b>.
+                <p class="hero-des">I make elegantly professional <b>web</b> apps and <b>flutter</b> apps for a living
+                    and also design <b>user experiences</b>.
                     If you want me to do any one of these for you, get in touch with me here.
                 </p>
 
