added responsive hamburger menu

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         <li><span>Contact</span></li>
                     </ul>
                 </div>
+                
             </center>
         </nav>
         <div class="animated fadeIn row" style="margin-top:10vh;animation-duration: 1.5s;">
@@ -73,6 +74,22 @@
 
         </div>
     </div>
+    <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
+          <div>
+            <div>
+              <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Uses</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     <div class="legal">
         legal
     </div>
