Responsive background & Bug fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         gtag('config', 'UA-159411627-1');
     </script>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
@@ -41,12 +41,13 @@
                         <li><span>Contact</span></li>
                     </ul>
                 </div>
-                
+
             </center>
         </nav>
         <div class="animated fadeIn row" style="margin-top:10vh;animation-duration: 1.5s;">
             <div class="col-md-6" id="left-hero">
-                <h1 class="hero-tag"><span class="typer" id="main" data-words="Hi, I'm Ishan." data-delay="100" data-deleteDelay="1000" data-loop="1"></span>
+                <h1 class="hero-tag"><span class="typer" id="main" data-words="Hi, I'm Ishan." data-delay="100"
+                        data-deleteDelay="1000" data-loop="1"></span>
                     &nbsp;</h1>
                 <p class="hero-des">I make elegantly professional <b>web</b> apps and <b>flutter</b> apps for a living
                     and also design <b>user experiences</b>.
@@ -76,20 +77,22 @@
     </div>
     <div class="menu-wrap">
         <input type="checkbox" class="toggler">
-        <div class="hamburger"><div></div></div>
-        <div class="menu">
-          <div>
-            <div>
-              <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Uses</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </div>
-          </div>
+        <div class="hamburger">
+            <div></div>
         </div>
-      </div>
+        <div class="menu">
+            <div>
+                <div>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Uses</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="legal">
         legal
     </div>
