Added support for Progressive Web Apps

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         content="Ishan Sharma ishandeveloper Ishan Inc. Chandigarh, India www.ishandeveloper.com .NET | ML | AI | Python | UI/UX | App Developer | Flutter | Web Developer" />
     <title>Ishan Sharma</title>
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="apple-touch-icon" href="assets/img/favicon.png">
+    <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4">
+    <meta name="theme-color" content="#FFE1C4">
+    <script src="assets/js/app.js"></script>
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body id="index-body" style="overflow: hidden;">
