--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="animated fadeIn row" style="margin-top:10vh;animation-duration: 1.5s;">
             <div class="col-md-6" id="left-hero">
                 <h1 class="hero-tag"><span class="typer" id="main" data-words="Hi, I'm Ishan." data-delay="100"
-                        data-deleteDelay="1000" data-loop="1"></span>
+                        data-deleteDelay="1000" data-loop="1" style="color:blue!important;"></span>
                     &nbsp;</h1>
                 <p class="hero-des">I make elegantly professional <b>web</b> apps and <b>flutter</b> apps for a living
                     and also design <b>user experiences</b>.
@@ -66,11 +66,11 @@
                     Contact Me
                 </button>
                 <div class="social-icons">
-                    <i class="fas fa-envelope"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-hackerrank"></i>
-                    <i class="fab fa-github"></i>
-                    <i class="fab fa-linkedin"></i>
+                    <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i class="fas fa-envelope"></i></a>
+                    <a target="_blank" href="https://instagram.com/developer.ishan"><i class="fab fa-instagram"></i></a>
+                    <a target="_blank" href="https://hackerrank.com/ishandeveloper"><i class="fab fa-hackerrank"></i></a>
+                    <a target="_blank" href="https://github.com/ishandeveloper"><i class="fab fa-github"></i></a>
+                    <a target="_blank" href="https://linkedin.com/in/ishandeveloper"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
 
