--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 <div class="social-icons">
                     <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i class="fas fa-envelope"></i></a>
                     <a target="_blank" href="https://instagram.com/developer.ishan"><i class="fab fa-instagram"></i></a>
-                    <a target="_blank" href="https://hackerrank.com/ishandeveloper"><i class="fab fa-hackerrank"></i></a>
+                    <a target="_blank" href="https://hackerrank.com/ishandeveloper"><i
+                            class="fab fa-hackerrank"></i></a>
                     <a target="_blank" href="https://github.com/ishandeveloper"><i class="fab fa-github"></i></a>
                     <a target="_blank" href="https://linkedin.com/in/ishandeveloper"><i class="fab fa-linkedin"></i></a>
                 </div>
