--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         <nav class="nav-desk">
             <center>
                 <div class="nav-logo">
-                    <img id="logo" src="assets/img/profile.jfif">
+                    <a href="index.html"><img id="logo" src="assets/img/logo2.png"></a>
                 </div>
                 <div class="nav-items">
                     <ul>
-                        <li><span>About</span></li>
-                        <li><span>Portfolio</span></li>
-                        <li><span>Uses</span></li>
-                        <li><span>Contact</span></li>
+                        <li><span><a href="about.html">About</a></span></li>
+                        <li><span><a href="portfolio.html">Portfolio</a></span></li>
+                        <li><span><a href="uses.html">Uses</a></span></li>
+                        <li><span><a href="contact.html">Contact</a></span></li>
                     </ul>
                 </div>
 
