--- a/contact.html
+++ b/contact.html
@@ -85,6 +85,7 @@
             <div>
                 <div>
                     <ul>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Portfolio</a></li>
                         <li><a href="#">Uses</a></li>
