--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 <button class="animated bounce delay-4s learn-btn">
                     Learn More
                 </button>
-                <button class="contact-btn">
+                <a href="contact.html"><button class="contact-btn">
                     Contact Me
-                </button>
+                </button></a>
                 <div class="social-icons">
                     <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i class="fas fa-envelope"></i></a>
                     <a target="_blank" href="https://instagram.com/developer.ishan"><i class="fab fa-instagram"></i></a>
@@ -90,10 +90,11 @@
             <div>
                 <div>
                     <ul>
+                        <li><a href="#" style="text-decoration: line-through;">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Portfolio</a></li>
                         <li><a href="#">Uses</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
