--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159411627-1"></script>
+<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159411627-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -11,7 +11,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-159411627-1');
-    </script>
+    </script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
