--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             </center>
         </nav>
-        <div class="animated fadeIn row" style="margin-top:10vh;animation-duration: 1.5s;">
+        <div class="animated fadeIn row" style="width:100vw;animation-duration: 1.5s;">
             <div class="col-md-6" id="left-hero">
                 <h1 class="hero-tag"><span class="typer" id="main" data-words="Hi, I'm Ishan." data-delay="100"
                         data-deleteDelay="1000" data-loop="1" style="color:blue!important;"></span>
@@ -101,7 +101,7 @@
         </div>
     </div>
     <div class="legal">
-        legal
+        <a href="legal.html">legal</a>
     </div>
 </body>
 
