--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 
             </center>
         </nav>
-        <div class="animated fadeIn row" style="margin-top:10vh;animation-duration: 1.5s;">
+        <div class="animated fadeIn row" style="width:100vw;animation-duration: 1.5s;">
             <div class="col-md-6" id="left-hero">
                 <h1 class="hero-tag contact-hero animated fadeInLeft">Let's Get In Touch.</h1>
                 <p class="hero-des contact-des animated fadeIn delay-1s">Want to discuss a project, an idea, an opportunity? Just fill up this
