--- a/legal.html
+++ b/legal.html
@@ -26,7 +26,7 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
-<body id="contact-body" style="overflow-x: hidden;">
+<body id="legal-body" style="overflow-x: hidden;">
     <div>
         <nav class="nav-desk">
             <center>
@@ -46,8 +46,8 @@
         </nav>
         <div class="animated fadeIn row" style="width:100vw;animation-duration: 1.5s;">
             <div class="col-md-12" id="left-hero">
-                <h1 class="hero-tag contact-hero copyright animated fadeInLeft"></h1>
-                <p class="hero-des  animated fadeIn"><b><span class="copyright-legal">Contents of this site are ©
+                <h1 id="legal-hero" class="hero-tag contact-hero copyright animated fadeInLeft"></h1>
+                <p id="legal-hero-des" class="hero-des  animated fadeIn"><b><span class="copyright-legal">Contents of this site are ©
                             Copyright 2020 Ishan Sharma. All rights reserved.</b></span><br>
                     The <a class="legal-links" href="https://github.com/ishandeveloper/Portfolio">source code</a> is
                     available under the <a class="legal-links"
@@ -101,13 +101,13 @@
             <div class="social-icons" style="display: inline;">
                 <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i class="fas fa-envelope"></i></a>
                 <a target="_blank" href="https://instagram.com/developer.ishan"><i class="fab fa-instagram"></i></a>
-                <a target="_blank" href="https://hackerrank.com/ishandeveloper"><i
-                        class="fab fa-hackerrank"></i></a>
+                <a target="_blank" href="https://hackerrank.com/ishandeveloper"><i class="fab fa-hackerrank"></i></a>
                 <a target="_blank" href="https://github.com/ishandeveloper"><i class="fab fa-github"></i></a>
                 <a target="_blank" href="https://linkedin.com/in/ishandeveloper"><i class="fab fa-linkedin"></i></a>
             </div>
             <div class="footer-credits">
-                Made with <span style="color:red">♥</span> by <a href="https://github.com/ishandeveloper">ishandeveloper</a>
+                Made with <span style="color:red">♥</span> by <a
+                    href="https://github.com/ishandeveloper">ishandeveloper</a>
             </div>
         </div>
     </div>
