--- a/contact.html
+++ b/contact.html
@@ -75,6 +75,19 @@
             </div>
 
         </div>
+        <div class="footer-full animated fadeIn delay-2s">
+            <div id="contact-social" class="social-icons" style="display: inline;">
+                <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i class="fas fa-envelope"></i></a>
+                <a target="_blank" href="https://instagram.com/developer.ishan"><i class="fab fa-instagram"></i></a>
+                <a target="_blank" href="https://hackerrank.com/ishandeveloper"><i
+                        class="fab fa-hackerrank"></i></a>
+                <a target="_blank" href="https://github.com/ishandeveloper"><i class="fab fa-github"></i></a>
+                <a target="_blank" href="https://linkedin.com/in/ishandeveloper"><i class="fab fa-linkedin"></i></a>
+            </div>
+            <div class="footer-credits">
+                Made with <span style="color:red">♥</span> by <a href="https://github.com/ishandeveloper">ishandeveloper</a>
+            </div>
+        </div>
     </div>
     <div class="menu-wrap">
         <input type="checkbox" class="toggler">
