--- a/legal.html
+++ b/legal.html
@@ -47,7 +47,8 @@
         <div class="animated fadeIn row" style="width:100vw;animation-duration: 1.5s;">
             <div class="col-md-12" id="left-hero">
                 <h1 id="legal-hero" class="hero-tag contact-hero copyright animated fadeInLeft"></h1>
-                <p id="legal-hero-des" class="hero-des  animated fadeIn"><b><span class="copyright-legal">Contents of this site are ©
+                <p id="legal-hero-des" class="hero-des  animated fadeIn"><b><span class="copyright-legal">Contents of
+                            this site are ©
                             Copyright 2020 Ishan Sharma. All rights reserved.</b></span><br>
                     The <a class="legal-links" href="https://github.com/ishandeveloper/Portfolio">source code</a> is
                     available under the <a class="legal-links"
