--- a/contact.html
+++ b/contact.html
@@ -47,14 +47,19 @@
         <div class="animated fadeIn row" style="width:100vw;animation-duration: 1.5s;">
             <div class="col-md-6" id="left-hero">
                 <h1 class="hero-tag contact-hero animated fadeInLeft">Let's Get In Touch.</h1>
-                <p class="hero-des contact-des animated fadeIn delay-1s">Want to discuss a project, an idea, an opportunity? Just fill up this
-                    form or write me an email <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i class="fas fa-envelope"></i></a>
+                <p class="hero-des contact-des animated fadeIn delay-1s">Want to discuss a project, an idea, an
+                    opportunity? Just fill up this
+                    form or write me an email <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i
+                            class="fas fa-envelope"></i></a>
                 </p>
-                <form class="input-container" method="POST"action="https://script.google.com/macros/s/AKfycbxXnXVlCixiL89xlFlqgGmp3mQnQpR48x6CiZfHtw/exec">
-                    <div class="form-group"><label for="name">Name</label><input type="text" name="name"
-                            id="name" class="form-control" required=""></div>
-                    <div class="form-group"><label for="email">Email Address</label><input type="email" name="email" id="email" class="form-control" required=""></div>
-                    <div class="form-group"><label for="message">Your Message</label><textarea rows="3" id="message" name="message" class="form-control" required=""></textarea></div>
+                <form class="input-container" method="POST"
+                    action="https://script.google.com/macros/s/AKfycbxXnXVlCixiL89xlFlqgGmp3mQnQpR48x6CiZfHtw/exec">
+                    <div class="form-group"><label for="name">Name</label><input type="text" name="name" id="name"
+                            class="form-control" required=""></div>
+                    <div class="form-group"><label for="email">Email Address</label><input type="email" name="email"
+                            id="email" class="form-control" required=""></div>
+                    <div class="form-group"><label for="message">Your Message</label><textarea rows="3" id="message"
+                            name="message" class="form-control" required=""></textarea></div>
                     <button type="submit" class="submit animated bounce delay-4s learn-btn">
                         Send Message
                     </button>
@@ -67,7 +72,7 @@
                 </form>
                 <br>
                 <!-- <div class="feedback"><a href="https://d474b570.nolt.io/">Have any feedback or suggestion?</a></div> -->
-                
+
             </div>
 
             <div class="col-md-6" id="hero-right">
@@ -79,13 +84,13 @@
             <div id="contact-social" class="social-icons" style="display: inline;">
                 <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i class="fas fa-envelope"></i></a>
                 <a target="_blank" href="https://instagram.com/developer.ishan"><i class="fab fa-instagram"></i></a>
-                <a target="_blank" href="https://hackerrank.com/ishandeveloper"><i
-                        class="fab fa-hackerrank"></i></a>
+                <a target="_blank" href="https://hackerrank.com/ishandeveloper"><i class="fab fa-hackerrank"></i></a>
                 <a target="_blank" href="https://github.com/ishandeveloper"><i class="fab fa-github"></i></a>
                 <a target="_blank" href="https://linkedin.com/in/ishandeveloper"><i class="fab fa-linkedin"></i></a>
             </div>
             <div class="footer-credits">
-                Made with <span style="color:red">♥</span> by <a href="https://github.com/ishandeveloper">ishandeveloper</a>
+                Made with <span style="color:red">♥</span> by <a
+                    href="https://github.com/ishandeveloper">ishandeveloper</a>
             </div>
         </div>
     </div>
