--- a/legal.html
+++ b/legal.html
@@ -125,7 +125,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="#">Portfolio</a></li>
                         <li><a href="#">Uses</a></li>
-                        <li><a disabled href="#" style="text-decoration: line-through;">Contact</a></li>
+                        <li><a disabled href="contact.html" >Contact</a></li>
                     </ul>
                 </div>
             </div>
