--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="nav-items">
                     <ul>
                         <li><span><a href="about.html">About</a></span></li>
-                        <li><span><a href="portfolio.html">Portfolio</a></span></li>
+                        <li><span><a href="work.html">Work</a></span></li>
                         <li><span><a href="uses.html">Uses</a></span></li>
                         <li><span><a href="contact.html">Contact</a></span></li>
                     </ul>
@@ -99,7 +99,7 @@
                     <ul>
                         <li><a href="#" style="text-decoration: line-through;">Home</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="work.html">Work</a></li>
                         <li><a href="#">Uses</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
