--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="row" id="work-row">
-            <div class="col-md-6 col-sm-12 animated fadeInLeft delay-2s">
+            <div class="col-md-6 col-sm-12 animated bounceInLeft delay-2s">
                 <center>
                     <div class="work-hero">
                         <img class="work-hero-img" src="assets/img/work/hotspoter/hotspoter-hero.png">
@@ -63,7 +63,7 @@
             </div>
             <div class="col-md-6 col-sm-12">
                 
-                    <div class="work-des animated fadeInRight">
+                    <div class="work-des animated jackinthebox delay-2s">
                         <h1>Hotspoter</h1>
                         <p>Hotspoter is special software that allows users to transform their computer into a wireless router. This is ideal for people who are looking for a way to use their existing internet connection to surf on their Smartphone, while the connection can also be shared with a large number of different people at the same time without weakening the signal strength.</p>
                         <div class="technologies">
