Added Partner Links

--- a/work.html
+++ b/work.html
@@ -79,12 +79,13 @@
                         <div class="technologies featured">
                             <h2>Featured On</h2>
                             <span class="partners">
-                                <img id="partner-logo" src="assets/img/work/hotspoter/cnet.png" style="border-radius: 50%;">
+                                <a target="_blank" href="https://hotspoter.en.softonic.com"><img id="partner-logo" src="assets/img/work/hotspoter/softonic.png" style="padding:10px;"></a>
+                            </span>
+                            <span class="partners">
+                                <a target="_blank" href="https://download.cnet.com/Hotspoter/3000-18508_4-76462434.html"><img id="partner-logo" src="assets/img/work/hotspoter/cnet.png" style="border-radius: 50%;"></a>
                             </span>
 
-                            <span class="partners">
-                                <img id="partner-logo" src="assets/img/work/hotspoter/softonic.png" style="padding:10px;">
-                            </span>
+                            
 
                         </div>
                         
