--- a/work.html
+++ b/work.html
@@ -110,6 +110,26 @@
                 </div>
             </div>
         </div>
+        <div class="row work-double-row">
+            <div class="col-md-6 col-sm-12 animated bounceInLeft delay-3s">
+
+                <div class="work-hero-card">
+                    
+                        <img class="work-card-hero-img" src="assets/img/work/mehak/hero.png">
+                        <h1>mehaksharma.co</h1>
+                        <div id="work-text">PORTFOLIO</div>
+                </div>
+
+            </div>
+            <div class="col-md-6 col-sm-12 animated bounceInRight delay-3s">
+                <div class="work-hero-card">
+                    
+                    <img class="work-card-hero-img" src="assets/img/work/url/hero.PNG">
+                    <h1>ishandeveloper.com/ushort</h1>
+                    <div id="work-text">WEB APP</div>
+            </div>
+            </div>
+        </div>
         <div class="footer-full animated fadeIn delay-2s">
             <div id="contact-social" class="social-icons" style="display: inline;">
                 <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i class="fas fa-envelope"></i></a>
