--- a/work.html
+++ b/work.html
@@ -114,19 +114,39 @@
             <div class="col-md-6 col-sm-12 animated bounceInLeft delay-3s">
 
                 <div class="work-hero-card">
+
+                    <img class="work-card-hero-img" src="assets/img/work/mehak/hero.png">
+                    <h1>mehaksharma.co</h1>
+                    <div id="work-text">PORTFOLIO</div>
+                </div>
+
+            </div>
+            <div class="col-md-6 col-sm-12 animated bounceInRight delay-3s">
+                <div class="work-hero-card">
+
+                    <img class="work-card-hero-img" src="assets/img/work/url/url-bar.png">
+                    <h1>ishandeveloper.com/ushort</h1>
+                    <div id="work-text">WEB APP</div>
+                </div>
+            </div>
+        </div>
+        <div class="row work-double-row" id="row-3">
+            <div class="col-md-6 col-sm-12 animated bounceInLeft delay-3s">
+
+                <div class="work-hero-card">
                     
-                        <img class="work-card-hero-img" src="assets/img/work/mehak/hero.png">
-                        <h1>mehaksharma.co</h1>
-                        <div id="work-text">PORTFOLIO</div>
+                        <img class="work-card-hero-img" src="assets/img/work/foodfuel/food.png">
+                        <h1>ishandeveloper.com/foodfuel</h1>
+                        <div id="work-text">WEB APP</div>
                 </div>
 
             </div>
             <div class="col-md-6 col-sm-12 animated bounceInRight delay-3s">
                 <div class="work-hero-card">
                     
-                    <img class="work-card-hero-img" src="assets/img/work/url/hero.PNG">
-                    <h1>ishandeveloper.com/ushort</h1>
-                    <div id="work-text">WEB APP</div>
+                    <img class="work-card-hero-img" src="assets/img/work/timestamp/hero.png">
+                    <h1>ishandeveloper.com/api/timestamp</h1>
+                    <div id="work-text">API</div>
             </div>
             </div>
         </div>
