--- a/work.html
+++ b/work.html
@@ -44,145 +44,149 @@
 
             </center>
         </nav>
-        <div class="animated fadeIn row" style="width:100vw;height:auto;animation-duration: 1.5s;">
+        <div class=" fadeIn row" style="width:100vw;height:auto;animation-duration: 1.5s;">
             <div class="col-md-12" id="left-hero">
-                <h1 class="hero-tag contact-hero animated fadeInLeft">My Work.</h1>
-                <p class="hero-des contact-des animated fadeIn delay-1s">Take a look at some of my projects I've done,
+                <h1 class="hero-tag contact-hero  fadeInLeft">My Work.</h1>
+                <p class="hero-des contact-des  fadeIn delay-1s">Take a look at some of my projects I've done,
                     apps or websites that I've made and my designs.
                 </p>
                 <!-- <div class="feedback"><a href="https://d474b570.nolt.io/">Have any feedback or suggestion?</a></div> -->
             </div>
         </div>
-        <div class="row" id="work-row">
-            <div class="col-md-6 col-sm-12 animated bounceInLeft delay-2s">
-                <center>
-                    <div class="work-hero">
-                        <img class="work-hero-img" src="assets/img/work/hotspoter/hotspoter-hero.png">
-                    </div>
-                </center>
-            </div>
-            <div class="col-md-6 col-sm-12">
-
-                <div class="work-des animated jackinthebox delay-2s">
-                    <h1>Hotspoter</h1>
+        <!--Content-->
+        <div class="animated fadeIng delay-1s">
+            <div class="row" id="work-row">
+                <div class="col-md-6 col-sm-12  bounceInLeft delay-2s">
                     <center>
-                        <div class="project-star-mobile animated zoomIn delay-3s">
-                            <i class="fas fa-star"></i> Top Project
+                        <div class="work-hero">
+                            <img class="work-hero-img" src="assets/img/work/hotspoter/hotspoter-hero.png">
                         </div>
                     </center>
-                    <p>Hotspoter is special software that allows users to transform their computer into a wireless
-                        router. This is ideal for people who are looking for a way to use their existing internet
-                        connection to surf on their Smartphone, while the connection can also be shared with a large
-                        number of different people at the same time without weakening the signal strength.</p>
-                    <div class="technologies">
-                        <h2>Technologies Used</h2>
-                        <span class="tech-stack">
-                            CSharp
-                        </span>
-                        <span class="tech-stack">
-                            .Net Framework
-                        </span>
+                </div>
+                <div class="col-md-6 col-sm-12">
 
-                    </div>
-                    <div class="technologies featured">
-                        <h2>Featured On</h2>
-                        <span class="partners">
-                            <a target="_blank" href="https://hotspoter.en.softonic.com"><img id="partner-logo"
-                                    src="assets/img/work/hotspoter/softonic.png" style="padding:10px;"></a>
-                        </span>
-                        <span class="partners">
-                            <a target="_blank"
-                                href="https://download.cnet.com/Hotspoter/3000-18508_4-76462434.html"><img
-                                    id="partner-logo" src="assets/img/work/hotspoter/cnet.png"
-                                    style="border-radius: 50%;"></a>
-                        </span>
+                    <div class="work-des ">
+                        <h1>Hotspoter</h1>
+                        <center>
+                            <div class="project-star-mobile  animated zoomIn delay-3s">
+                                <i class="fas fa-star"></i> Top Project
+                            </div>
+                        </center>
+                        <p>Hotspoter is special software that allows users to transform their computer into a wireless
+                            router. This is ideal for people who are looking for a way to use their existing internet
+                            connection to surf on their Smartphone, while the connection can also be shared with a large
+                            number of different people at the same time without weakening the signal strength.</p>
+                        <div class="technologies">
+                            <h2>Technologies Used</h2>
+                            <span class="tech-stack">
+                                CSharp
+                            </span>
+                            <span class="tech-stack">
+                                .Net Framework
+                            </span>
+
+                        </div>
+                        <div class="technologies featured">
+                            <h2>Featured On</h2>
+                            <span class="partners">
+                                <a target="_blank" href="https://hotspoter.en.softonic.com"><img id="partner-logo"
+                                        src="assets/img/work/hotspoter/softonic.png" style="padding:10px;"></a>
+                            </span>
+                            <span class="partners">
+                                <a target="_blank"
+                                    href="https://download.cnet.com/Hotspoter/3000-18508_4-76462434.html"><img
+                                        id="partner-logo" src="assets/img/work/hotspoter/cnet.png"
+                                        style="border-radius: 50%;"></a>
+                            </span>
 
 
 
-                    </div>
+                        </div>
 
-                    <!-- <button class="contact-btn work-read" style="margin:0;">
+                        <!-- <button class="contact-btn work-read" style="margin:0;">
                             Read More
                         </button> -->
-                </div>
-                <div class="project-star animated zoomIn delay-3s">
-                    <i class="fas fa-star"></i> Top Project
-                </div>
-            </div>
-        </div>
-        <div class="row work-double-row">
-            <div class="col-md-6 col-sm-12 animated bounceInLeft delay-3s">
-
-                <div class="work-hero-card">
-
-                    <img class="work-card-hero-img" src="assets/img/work/mehak/hero.png">
-                    <h1>mehaksharma.co</h1>
-                    <div id="work-text">PORTFOLIO</div>
-                </div>
-
-            </div>
-            <div class="col-md-6 col-sm-12 animated bounceInRight delay-3s">
-                <div class="work-hero-card">
-
-                    <img class="work-card-hero-img" src="assets/img/work/url/url-bar.png">
-                    <h1>ishandeveloper.com/ushort</h1>
-                    <div id="work-text">WEB APP</div>
+                    </div>
+                    <div class="project-star  zoomIn delay-3s">
+                        <i class="fas fa-star"></i> Top Project
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row work-double-row" id="row-3">
-            <div class="col-md-6 col-sm-12 animated bounceInLeft delay-3s">
+            <div class="row work-double-row">
+                <div class="col-md-6 col-sm-12  bounceInLeft delay-3s">
 
-                <div class="work-hero-card">
-                    
+                    <div class="work-hero-card">
+
+                        <img class="work-card-hero-img" src="assets/img/work/mehak/hero.png">
+                        <h1>mehaksharma.co</h1>
+                        <div id="work-text">PORTFOLIO</div>
+                    </div>
+
+                </div>
+                <div class="col-md-6 col-sm-12  bounceInRight delay-3s">
+                    <div class="work-hero-card">
+
+                        <img class="work-card-hero-img" src="assets/img/work/url/url-bar.png">
+                        <h1>ishandeveloper.com/ushort</h1>
+                        <div id="work-text">WEB APP</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row work-double-row" id="row-3">
+                <div class="col-md-6 col-sm-12  bounceInLeft delay-3s">
+
+                    <div class="work-hero-card">
+
                         <img class="work-card-hero-img" src="assets/img/work/foodfuel/food.png">
                         <h1>ishandeveloper.com/foodfuel</h1>
                         <div id="work-text">WEB APP</div>
-                </div>
+                    </div>
 
-            </div>
-            <div class="col-md-6 col-sm-12 animated bounceInRight delay-3s">
-                <div class="work-hero-card">
-                    
-                    <img class="work-card-hero-img" src="assets/img/work/timestamp/hero.png">
-                    <h1>ishandeveloper.com/api/timestamp</h1>
-                    <div id="work-text">API</div>
-            </div>
-            </div>
-        </div>
-        <div class="footer-full animated fadeIn delay-2s">
-            <div id="contact-social" class="social-icons" style="display: inline;">
-                <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i class="fas fa-envelope"></i></a>
-                <a target="_blank" href="https://instagram.com/developer.ishan"><i class="fab fa-instagram"></i></a>
-                <a target="_blank" href="https://hackerrank.com/ishandeveloper"><i class="fab fa-hackerrank"></i></a>
-                <a target="_blank" href="https://github.com/ishandeveloper"><i class="fab fa-github"></i></a>
-                <a target="_blank" href="https://linkedin.com/in/ishandeveloper"><i class="fab fa-linkedin"></i></a>
-            </div>
-            <div class="footer-credits">
-                Made with <span style="color:red">♥</span> by <a
-                    href="https://github.com/ishandeveloper">ishandeveloper</a>
-            </div>
-        </div>
-    </div>
-    <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
-        <div class="hamburger">
-            <div></div>
-        </div>
-        <div class="menu">
-            <div>
-                <div>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Uses</a></li>
-                        <li><a disabled href="#" style="text-decoration: line-through;">Contact</a></li>
-                    </ul>
+                </div>
+                <div class="col-md-6 col-sm-12  bounceInRight delay-3s">
+                    <div class="work-hero-card">
+
+                        <img class="work-card-hero-img" src="assets/img/work/timestamp/hero.png">
+                        <h1>ishandeveloper.com/api/timestamp</h1>
+                        <div id="work-text">API</div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+            <div class="footer-full  fadeIn delay-2s">
+                <div id="contact-social" class="social-icons" style="display: inline;">
+                    <a target="_blank" href="mailto:ishandeveloper@outlook.com"><i class="fas fa-envelope"></i></a>
+                    <a target="_blank" href="https://instagram.com/developer.ishan"><i class="fab fa-instagram"></i></a>
+                    <a target="_blank" href="https://hackerrank.com/ishandeveloper"><i
+                            class="fab fa-hackerrank"></i></a>
+                    <a target="_blank" href="https://github.com/ishandeveloper"><i class="fab fa-github"></i></a>
+                    <a target="_blank" href="https://linkedin.com/in/ishandeveloper"><i class="fab fa-linkedin"></i></a>
+                </div>
+                <div class="footer-credits">
+                    Made with <span style="color:red">♥</span> by <a
+                        href="https://github.com/ishandeveloper">ishandeveloper</a>
+                </div>
+            </div>
+        </div>
+        <div class="menu-wrap">
+            <input type="checkbox" class="toggler">
+            <div class="hamburger">
+                <div></div>
+            </div>
+            <div class="menu">
+                <div>
+                    <div>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="#">Uses</a></li>
+                            <li><a disabled href="#" style="text-decoration: line-through;">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
