--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <!--Content-->
-        <div class="animated fadeIng delay-1s">
+        <div class="animated fadeIn delay-1s">
             <div class="row" id="work-row">
                 <div class="col-md-6 col-sm-12  bounceInLeft delay-2s">
                     <center>
