--- a/work.html
+++ b/work.html
@@ -152,6 +152,27 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row work-double-row" id="row-3">
+                <div class="col-md-6 col-sm-12  bounceInLeft delay-3s">
+
+                    <div class="work-hero-card">
+
+                        <img class="work-card-hero-img" src="assets/img/work/todo/hero.png">
+                        <h1>ishandeveloper.com/todo</h1>
+                        <div id="work-text">WEB APP</div>
+                    </div>
+
+                </div>
+                <div class="col-md-6 col-sm-12  bounceInRight delay-3s">
+                    <div class="work-hero-card">
+
+                        <img class="work-card-hero-img" src="assets/img/work/basketball/hero.png">
+                        <h1>ishandeveloper.com/basketball</h1>
+                        <div id="work-text">WEB TEMPLATE</div>
+                    </div>
+                </div>
+            </div>
         </div>
             <div class="footer-full  fadeIn delay-2s">
                 <div id="contact-social" class="social-icons" style="display: inline;">
