--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <!--Content-->
-        <div class="animated fadeIn delay-1s">
+        <div class="animated slideInUp delay-1s">
             <div class="row" id="work-row">
                 <div class="col-md-6 col-sm-12  bounceInLeft delay-2s">
                     <center>
@@ -68,8 +68,8 @@
                     <div class="work-des ">
                         <h1>Hotspoter</h1>
                         <center>
-                            <div class="project-star-mobile  animated zoomIn delay-3s">
-                                <i class="fas fa-star"></i> Top Project
+                            <div class="project-star-mobile  animated zoomIn delay-2s">
+                                <i class="fas fa-trophy"></i> <b>5 Million+</b> Downloads
                             </div>
                         </center>
                         <p>Hotspoter is special software that allows users to transform their computer into a wireless
@@ -107,8 +107,8 @@
                             Read More
                         </button> -->
                     </div>
-                    <div class="project-star  zoomIn delay-3s">
-                        <i class="fas fa-star"></i> Top Project
+                    <div class="project-star animated zoomIn delay-2s">
+                        <i class="fas fa-trophy"></i> <b>5 Million+</b> Downloads
                     </div>
                 </div>
             </div>
