--- a/work.html
+++ b/work.html
@@ -195,7 +195,27 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="row work-double-row" id="row-3">
+                <div class="col-md-6 col-sm-12  bounceInLeft delay-3s">
 
+                    <div class="work-hero-card">
+
+                        <img class="work-card-hero-img" src="assets/img/work/calculator/hero.png">
+                        <h1>ishandeveloper.com/apps/calculator</h1>
+                        <div id="work-text">FLUTTER APP</div>
+                    </div>
+
+                </div>
+                <div class="col-md-6 col-sm-12  bounceInRight delay-3s">
+                    <!-- <div class="work-hero-card">
+
+                        <img class="work-card-hero-img" src="assets/img/work/pokemon/hero.png">
+                        <h1>ishandeveloper.com/apps/pokemon</h1>
+                        <div id="work-text">FLUTTER APP</div>
+                    </div> -->
+                </div>
+            </div>
 
         </div>
             <div class="footer-full  fadeIn delay-2s">
