--- a/work.html
+++ b/work.html
@@ -182,7 +182,7 @@
 
                         <img class="work-card-hero-img" src="assets/img/work/dictionary/hero.png">
                         <h1>ishandeveloper.com/apps/dictionary</h1>
-                        <div id="work-text">FLUTTER APP</div>
+                        <div id="work-text">DICTIONARY APP</div>
                     </div>
 
                 </div>
@@ -191,7 +191,7 @@
 
                         <img class="work-card-hero-img" src="assets/img/work/pokemon/hero.png">
                         <h1>ishandeveloper.com/apps/pokemon</h1>
-                        <div id="work-text">FLUTTER APP</div>
+                        <div id="work-text">POKEMON APP</div>
                     </div>
                 </div>
             </div>
@@ -203,17 +203,17 @@
 
                         <img class="work-card-hero-img" src="assets/img/work/calculator/hero.png">
                         <h1>ishandeveloper.com/apps/calculator</h1>
-                        <div id="work-text">FLUTTER APP</div>
+                        <div id="work-text">CALCULATOR APP</div>
                     </div>
 
                 </div>
                 <div class="col-md-6 col-sm-12  bounceInRight delay-3s">
-                    <!-- <div class="work-hero-card">
+                    <div class="work-hero-card">
 
-                        <img class="work-card-hero-img" src="assets/img/work/pokemon/hero.png">
-                        <h1>ishandeveloper.com/apps/pokemon</h1>
-                        <div id="work-text">FLUTTER APP</div>
-                    </div> -->
+                        <img class="work-card-hero-img" src="assets/img/work/qr/hero.png">
+                        <h1>ishandeveloper.com/apps/qr</h1>
+                        <div id="work-text">QR SCANNER APP</div>
+                    </div>
                 </div>
             </div>
 
