Added UI/UX Project

--- a/work.html
+++ b/work.html
@@ -127,7 +127,7 @@
                     <div class="work-hero-card">
 
                         <img class="work-card-hero-img" src="assets/img/work/url/url-bar.png">
-                        <h1>ishandeveloper.com/ushort</h1>
+                        <h1>URL Shortener</h1>
                         <div id="work-text">WEB APP</div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                     <div class="work-hero-card">
 
                         <img class="work-card-hero-img" src="assets/img/work/foodfuel/food.png">
-                        <h1>ishandeveloper.com/foodfuel</h1>
+                        <h1>FoodFuel</h1>
                         <div id="work-text">WEB APP</div>
                     </div>
 
@@ -147,7 +147,7 @@
                     <div class="work-hero-card">
 
                         <img class="work-card-hero-img" src="assets/img/work/timestamp/hero.png">
-                        <h1>ishandeveloper.com/api/timestamp</h1>
+                        <h1>Timestamp Microservice</h1>
                         <div id="work-text">API</div>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                     <div class="work-hero-card">
 
                         <img class="work-card-hero-img" src="assets/img/work/todo/hero.png">
-                        <h1>ishandeveloper.com/todo</h1>
+                        <h1>Task-To-Do</h1>
                         <div id="work-text">WEB APP</div>
                     </div>
 
@@ -168,7 +168,7 @@
                     <div class="work-hero-card">
 
                         <img class="work-card-hero-img" src="assets/img/work/basketball/hero.png">
-                        <h1>ishandeveloper.com/basketball</h1>
+                        <h1>Basketball Tournament</h1>
                         <div id="work-text">WEB TEMPLATE</div>
                     </div>
                 </div>
@@ -181,8 +181,8 @@
                     <div class="work-hero-card">
 
                         <img class="work-card-hero-img" src="assets/img/work/dictionary/hero.png">
-                        <h1>ishandeveloper.com/apps/dictionary</h1>
-                        <div id="work-text">DICTIONARY APP</div>
+                        <h1>Dictionary</h1>
+                        <div id="work-text">FLUTTER APP</div>
                     </div>
 
                 </div>
@@ -190,8 +190,8 @@
                     <div class="work-hero-card">
 
                         <img class="work-card-hero-img" src="assets/img/work/pokemon/hero.png">
-                        <h1>ishandeveloper.com/apps/pokemon</h1>
-                        <div id="work-text">POKEMON APP</div>
+                        <h1>PokemonPedia</h1>
+                        <div id="work-text">FLUTTER APP</div>
                     </div>
                 </div>
             </div>
@@ -202,8 +202,8 @@
                     <div class="work-hero-card">
 
                         <img class="work-card-hero-img" src="assets/img/work/calculator/hero.png">
-                        <h1>ishandeveloper.com/apps/calculator</h1>
-                        <div id="work-text">CALCULATOR APP</div>
+                        <h1>Calculator</h1>
+                        <div id="work-text">FLUTTER APP</div>
                     </div>
 
                 </div>
@@ -211,12 +211,31 @@
                     <div class="work-hero-card">
 
                         <img class="work-card-hero-img" src="assets/img/work/qr/hero.png">
-                        <h1>ishandeveloper.com/apps/qr</h1>
-                        <div id="work-text">QR SCANNER APP</div>
+                        <h1>QR Code Scanner</h1>
+                        <div id="work-text">FLUTTER APP</div>
                     </div>
                 </div>
             </div>
+            <div class="row work-double-row" id="row-3">
+                <div class="col-md-6 col-sm-12  bounceInLeft delay-3s">
 
+                    <div class="work-hero-card">
+
+                        <img class="work-card-hero-img" src="assets/img/work/food/hero.png">
+                        <h1>SeeFood</h1>
+                        <div id="work-text">UI/UX</div>
+                    </div>
+
+                </div>
+                <div class="col-md-6 col-sm-12  bounceInRight delay-3s">
+                    <!-- <div class="work-hero-card">
+
+                        <img class="work-card-hero-img" src="assets/img/work/pokemon/hero.png">
+                        <h1>ishandeveloper.com/apps/pokemon</h1>
+                        <div id="work-text">FLUTTER APP</div>
+                    </div> -->
+                </div>
+            </div>
         </div>
             <div class="footer-full  fadeIn delay-2s">
                 <div id="contact-social" class="social-icons" style="display: inline;">
