--- a/work.html
+++ b/work.html
@@ -221,19 +221,19 @@
 
                     <div class="work-hero-card">
 
-                        <img class="work-card-hero-img" src="assets/img/work/food/hero.png">
-                        <h1>SeeFood</h1>
-                        <div id="work-text">UI/UX</div>
+                        <img class="work-card-hero-img" src="assets/img/work/ppt/2.png">
+                        <h1>Presentations in Browser</h1>
+                        <div id="work-text">WEB APP</div>
                     </div>
 
                 </div>
                 <div class="col-md-6 col-sm-12  bounceInRight delay-3s">
-                    <!-- <div class="work-hero-card">
+                    <div class="work-hero-card">
 
-                        <img class="work-card-hero-img" src="assets/img/work/pokemon/hero.png">
-                        <h1>ishandeveloper.com/apps/pokemon</h1>
-                        <div id="work-text">FLUTTER APP</div>
-                    </div> -->
+                        <img class="work-card-hero-img" src="assets/img/work/food/hero.png">
+                        <h1>SeeFood</h1>
+                        <div id="work-text">UI/UX</div>
+                    </div>
                 </div>
             </div>
         </div>
