--- a/work.html
+++ b/work.html
@@ -125,9 +125,27 @@
                 </div>
                 <div class="col-md-6 col-sm-12  bounceInRight delay-3s">
                     <div class="work-hero-card">
+                        <img class="work-card-hero-img" src="assets/img/work/ishandeveloper/hero.png">
+                        <h1>ishandeveloper.com</h1>
+                        <div id="work-text">PORTFOLIO</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row work-double-row" id="row-3">
+                <div class="col-md-6 col-sm-12  bounceInLeft delay-3s">
 
+                    <div class="work-hero-card">
                         <img class="work-card-hero-img" src="assets/img/work/url/url-bar.png">
                         <h1>URL Shortener</h1>
+                        <div id="work-text">WEB APP</div>                        
+                    </div>
+
+                </div>
+                <div class="col-md-6 col-sm-12  bounceInRight delay-3s">
+                    <div class="work-hero-card">
+
+                        <img class="work-card-hero-img" src="assets/img/work/news/hero.png">
+                        <h1>News App  [GoLang]</h1>
                         <div id="work-text">WEB APP</div>
                     </div>
                 </div>
@@ -236,6 +254,7 @@
                     </div>
                 </div>
             </div>
+            
         </div>
             <div class="footer-full  fadeIn delay-2s">
                 <div id="contact-social" class="social-icons" style="display: inline;">
